# rust_cross_platform_template

./: Cargo.toml  README.md
examples/: dummy.rs
src/: dummy.rs  lib.rs
src/platform/: mod.rs
src/platform/linux/: dummy.rs
src/platform/windows/: dummy.rs
tests/: dummy.rs
