[package]
name = "dummies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
cfg_aliases = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]

[profile.release]
strip = true